<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_grey"
    tools:context="com.elegantwalrus.metalalbumreleases.ReleaseListActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:title="@string/title_about"
        app:titleTextColor="@color/colorAccent">
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/toolbar">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/logo_large"
            android:layout_marginTop="30dp"/>

        <ImageView
            android:id="@+id/logo_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo_title_large"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:id="@+id/about_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo_title"
            android:textColor="@color/text_light"
            android:textSize="@dimen/text_medium"
            android:text="@string/about_metal_archives"
            android:gravity="center"
            android:autoLink="web"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_text"
            android:text="@string/about_rate"
            android:layout_marginTop="32dp"
            android:background="@drawable/btn_bg_dark_edged"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_copyright"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp"/>
        
    </RelativeLayout>

</RelativeLayout>
