<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    tools:context="com.elegantwalrus.metalalbumreleases.ReleaseListActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginRight="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <EditText
                    android:id="@+id/search_input"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:layout_alignParentBottom="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:hint="@string/hint_search_input"
                    android:textColorHint="@color/text_light_2"
                    android:background="@color/colorPrimary"
                    android:enabled="false"/>

                <com.elegantwalrus.metalalbumreleases.view.FontAwesomeView
                    android:id="@+id/btn_search_input_delete"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:text="@string/fa_times"
                    android:textColor="@color/colorAccent"
                    android:gravity="center"
                    android:layout_alignParentRight="true"
                    android:textSize="@dimen/text_large"
                    android:enabled="false"/>
            </RelativeLayout>

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <com.applidium.headerlistview.HeaderListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/colorPrimaryDark"
        android:dividerHeight="1dp"
        android:layout_below="@+id/toolbar"/>

    <RelativeLayout
        android:id="@+id/container_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:background="@color/colorPrimaryDark">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_below="@+id/logo">

            <TextView
                android:id="@+id/tv_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/message_progress"
                android:layout_marginRight="8dp"/>

            <com.github.ybq.android.spinkit.SpinKitView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/spin_kit"
                style="@style/SpinKitView.Small.ThreeBounce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_centerInParent="true"
                android:layout_toRightOf="@+id/tv_progress"
                app:SpinKit_Color="@color/colorAccent" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>
